welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: ':' expected but ',' found.
def move(nbPas,versLAvant)
              ^Program:12: error: Missing closing brace `}' assumed here
}
^