welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas,versLAvant)
	{if versLAvant
		{for (i <- 1 to nbPas)
			{avance()
			return}
		for (i <- 1 to nbPas)
			{avance()
			return}
		}